# Library

lib_LTLIBRARIES = libdatastruct.la

libdatastruct_la_SOURCES = karatsuba.cpp
libdatastruct_la_CXXFLAGS = --std=c++11 -Wall -Wextra

# Unit test

#noinst_PROGRAMS = test_karatsuba

#test_karatsuba_SOURCES = karatsuba.cpp
#test_karatsuba_CXXFLAGS = -Wall -Wextra -pthread --std=c++11
#test_karatsuba_LDADD = -lpthread -lgtest_main -lgtest 

#TESTS = test_karatsuba
